overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,9 @@ html {
     font-family: 'Open Sans', sans-serif !important;
 }
 
-body {
-    overflow-x: hidden;
+html, body {
+  overflow-x: hidden !important;
+  width: 100% !important;
 }
 
 nav {
